--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,38 @@ services:
       - '3000:3000'
     depends_on:
       - influxdb
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
   fluentd:
     image: fluentd-influxdb
     build: ./fluentd
     ports:
       - '24224:24224'
     volumes:
-      - './fluentd/fluent.conf:/fluentd/etc/fluent.conf'
+      - './fluentd/configs/:/fluentd/etc/'
       - './logs/:/var/log/'
   influxdb:
     image: influxdb
     ports:
       - '8086:8086'
     environment:
-      - INFLUXDB_DB=test
-      - INFLUXDB_ADMIN_USER=admin
-      - INFLUXDB_ADMIN_PASSWORD=admin
+      - INFLUXDB_DB=${INFLUXDB_DB}
+      - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
+      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
     volumes:
       - './data:/var/lib/influxdb'
+  chronograf:
+    image: chronograf:latest
+    ports:
+      - '8888:8888'
+    volumes:
+      - chronograf-storage:/var/lib/chronograf
+    depends_on:
+      - influxdb
+    environment:
+      - INFLUXDB_URL=http://influxdb:8086
+      - INFLUXDB_USERNAME=${INFLUXDB_USERNAME}
+      - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
+volumes:
+  chronograf-storage:
